--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div class="container-fluid">
     <div class="row">
         <h4 class="app-heading">
-            Shopping Cart Application
+        
         </h4>
     </div>
     <br>
-    <router-outlet></router-outlet>
 </div>
+<router-outlet></router-outlet>
+<footer>Developed by: Bhupendra Chouksey</footer>
