--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-
+body {
+    text-align:center;
+    align-content: center;
+}
 .image-in-card {
     max-width: 350px;
     max-height: 350px;
